--- a/src/components/Divider/divider.css
+++ b/src/components/Divider/divider.css
@@ -6,14 +6,14 @@
   width: 100%;
   display: block;
   margin: calc((var(--container-size) - var(--border-width)) / 2) 0;
-  border-top: var(--border-width) solid var(--sgds-default-color-muted);
+  border-top: var(--border-width) solid var(--sgds-color-muted);
 }
 
 :host([orientation="vertical"]) {
   height: 100%;
   display: inline-block;
   margin: 0 calc((var(--container-size) - var(--border-width)) / 2);
-  border-left: var(--border-width) solid var(--sgds-default-color-muted);
+  border-left: var(--border-width) solid var(--sgds-color-muted);
 }
 
 :host([thickness="thin"]) {
