--- a/src/internals/OverflowMenu/overflow-menu.css
+++ b/src/internals/OverflowMenu/overflow-menu.css
@@ -6,7 +6,7 @@
 .overflow-btn {
 	width: var(--sgds-dimension-32);
 	height: var(--sgds-dimension-32);
-	background-color: var(--sgds-default-bg-transparent);
+	background-color: var(--sgds-bg-transparent);
 	border-radius:  var(--sgds-border-radius-sm);
 	border: 0;
 	padding: 0;
@@ -17,12 +17,12 @@
 	align-items: center;
 }
 .overflow-btn:hover {
-	background-color: var(--sgds-default-bg-translucent);
+	background-color: var(--sgds-bg-translucent);
 }
 
 .overflow-btn:focus,
 .overflow-btn:focus-visible {
 	outline: 0;
 	box-shadow: var(--sgds-box-shadow-focus);
-	background-color: var(--sgds-default-bg-translucent);
+	background-color: var(--sgds-bg-translucent);
 }
