--- a/.storybook/global.css
+++ b/.storybook/global.css
@@ -38,7 +38,7 @@ sgds-faq-grid {
 }
 
 .docs-story{
-  background: var(--sgds-default-bg);
+  background: var(--sgds-bg-default);
 }
 ul.toc-list > * {
   font-size: var(--sgds-font-size-1);
