--- a/src/base/sgds-element.css
+++ b/src/base/sgds-element.css
@@ -1,7 +1,7 @@
 :host {
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  color: var(--sgds-body-color);
+  color: var(--sgds-body-color-default);
   font-family: var(--sgds-font-family-brand);
   font-size: var(--sgds-font-size-2);
   font-weight: var(--sgds-font-weight-regular);
@@ -24,7 +24,7 @@
 
   a[target="_blank"] {
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
     gap: var(--sgds-gap-2-xs);
   }
