--- a/src/components/Alert/alert.css
+++ b/src/components/Alert/alert.css
@@ -1,55 +1,55 @@
 :host([variant="success"]) .alert {
-  background-color: var(--sgds-success-bg);
+  background-color: var(--sgds-success-surface-default);
 }
 
 :host([variant="warning"]) .alert {
-  background-color: var(--sgds-warning-bg);
+  background-color: var(--sgds-warning-surface-default);
 }
 
 :host([variant="danger"]) .alert {
-  background-color: var(--sgds-danger-bg);
+  background-color: var(--sgds-danger-surface-default);
 }
 
 :host([variant="neutral"]) .alert {
-  background-color: var(--sgds-neutral-bg);
+  background-color: var(--sgds-neutral-surface-default);
 }
 
 :host([variant="success"][outlined]) .alert {
-  background-color: var(--sgds-success-bg-subtle);
-  border: var(--sgds-border-width-1) solid var(--sgds-success-border-color-subtle);
+  background-color: var(--sgds-success-surface-muted);
+  border: var(--sgds-border-width-1) solid var(--sgds-success-border-color-default);
 }
 
 :host([variant="warning"][outlined]) .alert {
-  background-color: var(--sgds-warning-bg-subtle);
-  border: var(--sgds-border-width-1) solid var(--sgds-warning-border-color-subtle);
+  background-color: var(--sgds-warning-surface-muted);
+  border: var(--sgds-border-width-1) solid var(--sgds-warning-border-color-default);
 }
 
 :host([variant="danger"][outlined]) .alert {
-  background-color: var(--sgds-danger-bg-subtle);
-  border: var(--sgds-border-width-1) solid var(--sgds-danger-border-color-subtle);
+  background-color: var(--sgds-danger-surface-muted);
+  border: var(--sgds-border-width-1) solid var(--sgds-danger-border-color-default);
 }
 
 :host([variant="neutral"][outlined]) .alert {
-  background-color: var(--sgds-neutral-bg-subtle);
-  border: var(--sgds-border-width-1) solid var(--sgds-neutral-border-color-subtle);
+  background-color: var(--sgds-neutral-surface-muted);
+  border: var(--sgds-border-width-1) solid var(--sgds-neutral-border-color-default);
 }
 
 .alert {
-  --sgds-alert-color: var(--sgds-default-color-on-dark);
+  --sgds-alert-color: var(--sgds-color-fixed-light);
   display: flex;
   flex-direction: row;
   gap: var(--sgds-gap-sm);
-  background-color: var(--sgds-primary-bg);
-  border: var(--sgds-border-width-1) solid var(--sgds-default-border-color-transparent);
+  background-color: var(--sgds-primary-surface-default);
+  border: var(--sgds-border-width-1) solid var(--sgds-border-color-transparent);
   border-radius: var(--sgds-border-radius-md);
   color: var(--sgds-alert-color);
   padding: var(--sgds-padding-lg);
 }
 
 .alert.outlined {
-  --sgds-alert-color: var(--sgds-default-color-on-light);
-  background-color: var(--sgds-primary-bg-subtle);
-  border: var(--sgds-border-width-1) solid var(--sgds-primary-border-color-subtle);
+  --sgds-alert-color: var(--sgds-color-fixed-dark);
+  background-color: var(--sgds-primary-surface-muted);
+  border: var(--sgds-border-width-1) solid var(--sgds-primary-border-color-default);
 }
 
 .alert-content {
