--- a/src/components/Breadcrumb/breadcrumb-item.css
+++ b/src/components/Breadcrumb/breadcrumb-item.css
@@ -4,16 +4,16 @@
   align-items: center;
 }
 :host([active]) .nav-link::slotted(*) {
-  --sgds-link-color: var(--sgds-default-color);
- color: var(--sgds-link-color, --sgds-default-color);
+  --sgds-link-color-default: var(--sgds-color-default);
+ color: var(--sgds-link-color-default, --sgds-color-default);
  pointer-events: none;
 }
 
 :host([active]) .nav-link::slotted(*:hover),
 :host([active]) .nav-link::slotted(*:focus),
 :host([active]) .nav-link::slotted(*:focus-visible){
-  --sgds-link-color-emphasis: var(--sgds-default-color);
-  color: var(--sgds-link-color-emphasis, --sgds-default-color);
+  --sgds-link-color-emphasis: var(--sgds-color-default);
+  color: var(--sgds-link-color-emphasis, --sgds-color-default);
 }
 
 .separator svg {
