--- a/src/components/DescriptionList/description-list-group.css
+++ b/src/components/DescriptionList/description-list-group.css
@@ -5,13 +5,13 @@
 
 
 :host([bordered]) .description-list-group {
-    border: var(--sgds-border-width-1) solid var(--sgds-default-border-color-muted);
+    border: var(--sgds-border-width-1) solid var(--sgds-border-color-muted);
     border-radius: var(--sgds-border-radius-md);
     
 }
 
 .description-list-group__title {
-    color: var(--sgds-header-color);
+    color: var(--sgds-header-color-default);
     font-weight: var(--sgds-font-weight-semibold);
     letter-spacing: var(--sgds-letter-spacing-tight);
     font-size: var(--sgds-font-size-4);
@@ -20,7 +20,7 @@
 
 .description-list-group__subtitle {
     font-weight: var(--sgds-font-weight-regular);
-    color: var(--sgds-default-color-subtle);
+    color: var(--sgds-color-subtle);
     font-size: var(--sgds-font-size-2);
     line-height: 150%;
 }
@@ -30,7 +30,7 @@
     flex-direction: column;
     gap: var(--sgds-gap-xs);
     padding: var(--sgds-padding-lg) var(--sgds-padding-xl);
-    border-bottom: var(--sgds-border-width-1) solid var(--sgds-default-border-color-muted);
+    border-bottom: var(--sgds-border-width-1) solid var(--sgds-border-color-muted);
 }
 
 
