--- a/src/components/Footer/footer-item.css
+++ b/src/components/Footer/footer-item.css
@@ -12,7 +12,7 @@
 slot[name="title"]::slotted(*) {
   --sgds-paragraph-spacing-xl: var(--sgds-margin-none);
   --sgds-font-weight-regular: var(--sgds-font-weight-semibold);
-  color: var(--sgds-default-color-inverse);
+  color: var(--sgds-color-inverse);
   font-weight: var(--sgds-font-weight-regular, --sgds-font-weight-semibold);
   margin: var(--sgds-paragraph-spacing-xl, --sgds-margin-none); 
 }
@@ -23,8 +23,8 @@ slot[name="title"]::slotted(*) {
 }
 
 .links slot::slotted(a) {
-  --sgds-link-color: var(--sgds-default-color-muted);
-  color: var(--sgds-link-color, --sgds-default-color-muted);
+  --sgds-link-color-default: var(--sgds-color-muted);
+  color: var(--sgds-link-color-default, --sgds-color-muted);
   text-decoration: none !important;
   width: fit-content;
 }
@@ -39,8 +39,8 @@ slot[name="title"]::slotted(*) {
 slot::slotted(a:hover),
 .links slot::slotted(a:focus),
 .links slot::slotted(a:focus-visible) {
-  --sgds-link-color-emphasis: var(--sgds-default-color-inverse);
-  color: var(--sgds-link-color-emphasis, --sgds-default-color-inverse);
+  --sgds-link-color-emphasis: var(--sgds-color-inverse);
+  color: var(--sgds-link-color-emphasis, --sgds-color-inverse);
 }
 
 .links slot::slotted(a:focus),
