--- a/src/components/Input/input.css
+++ b/src/components/Input/input.css
@@ -17,8 +17,8 @@
   align-items: center;
   justify-content: center;
   gap: var(--sgds-form-gap-md);
-  background-color: var(--sgds-form-bg);
-  border: var(--sgds-form-border-width-default) solid var(--sgds-form-border-color);
+  background-color: var(--sgds-form-surface-default);
+  border: var(--sgds-form-border-width-default) solid var(--sgds-border-color-default);
   border-radius: var(--input-border-radius);
   padding: 0px var(--sgds-form-padding-x);
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -53,26 +53,26 @@
 }
 
 .form-control-group.readonly {
-  border-color: var(--sgds-form-border-color-muted);
+  border-color: var(--sgds-border-color-muted);
 }
 
 .form-control-group:not(.disabled):not(.is-invalid):hover {
-  border: var(--sgds-form-border-width-thick) solid var(--sgds-form-border-color-emphasis);
+  border: var(--sgds-form-border-width-thick) solid var(--sgds-border-color-emphasis);
 }
 
 .form-control-group:not(.disabled):not(.is-invalid):focus,
 .form-control-group:not(.disabled):not(.is-invalid):focus-within {
-  border: var(--sgds-form-border-width-thick) solid var(--sgds-form-border-color-emphasis);
+  border: var(--sgds-form-border-width-thick) solid var(--sgds-border-color-emphasis);
   box-shadow: var(--sgds-form-box-shadow-focus);
   outline: 0;
 }
 
 .form-control-group.is-invalid {
-  border: var(--sgds-form-border-width-thick) solid var(--sgds-form-danger-border-color);
+  border: var(--sgds-form-border-width-thick) solid var(--sgds-form-danger-border-color-default);
 }
 
 .form-control-group.disabled {
-  background-color: var(--sgds-form-bg-muted);
+  background-color: var(--sgds-form-surface-muted);
 }
 
 :host(.quantity-toggle) input::-webkit-inner-spin-button {
