--- a/src/components/Textarea/textarea.css
+++ b/src/components/Textarea/textarea.css
@@ -22,8 +22,8 @@ textarea {
 .form-control {
   appearance: none;
   background-clip: padding-box;
-  background-color: var(--sgds-form-bg);
-  border: var(--sgds-form-border-width-default) solid var(--sgds-form-border-color);
+  background-color: var(--sgds-form-surface-default);
+  border: var(--sgds-form-border-width-default) solid var(--sgds-border-color-default);
   border-radius: var(--sgds-form-border-radius-md);
   color: var(--sgds-form-color-default);
   padding: var(--sgds-form-padding-y) var(--sgds-form-padding-x);
@@ -34,7 +34,7 @@ textarea {
 }
 
 .form-control[readonly] {
-  border-color: var(--sgds-form-border-color-muted);
+  border-color: var(--sgds-border-color-muted);
 }
 
 @media (prefers-reduced-motion: reduce) {
@@ -44,21 +44,21 @@ textarea {
 }
 
 .form-control:not([disabled]):not(.is-invalid):hover {
-  border: var(--sgds-form-border-width-thick) solid var(--sgds-form-border-color-emphasis);
+  border: var(--sgds-form-border-width-thick) solid var(--sgds-border-color-emphasis);
 }
 
 .form-control:not([disabled]):not(.is-invalid):focus,
 .form-control:not([disabled]):not(.is-invalid):focus-visible {
-  border: var(--sgds-form-border-width-thick) solid var(--sgds-form-border-color-emphasis);
+  border: var(--sgds-form-border-width-thick) solid var(--sgds-border-color-emphasis);
   box-shadow: var(--sgds-form-box-shadow-focus);
 }
 
 .form-control.is-invalid {
-  border: var(--sgds-form-border-width-thick) solid var(--sgds-form-danger-border-color);
+  border: var(--sgds-form-border-width-thick) solid var(--sgds-form-danger-border-color-default);
 }
 
 .form-control:disabled {
-  background-color: var(--sgds-form-bg-muted);
+  background-color: var(--sgds-form-surface-muted);
 }
 
 .textarea-resize-none {
